Fix weather layout alignment and update CSS for better styling.

--- a/index.css
+++ b/index.css
@@ -5,9 +5,6 @@
 body {
   margin: 0;
   background: no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -47,4 +44,29 @@ div#crypto-top {
 
 div#crypto-top > span {
   margin-left: 10px;
+}
+
+div#weather {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-self: flex-start;
+}
+
+div#weather > img {
+  width: 70px;
+}
+
+p.weather-city {
+  width: 100%;
+  text-align: right;
+  margin: 0;
+  margin-top: -10px;
+}
+
+p.weather-temp {
+  margin: 0;
+  font-size: 1.7rem;
+  margin-left: -10px;
 }
